force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_portal_Original_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Original_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Record</label>
    <referenceTo>ucinn_ascendv2__Affiliation__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>ucinn_portal_Affiliations_Affiliation</relationshipName>
    <type>Lookup</type>
</CustomField>