force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Use_Constituent_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Constituent_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Constituent Address</label>
    <type>Checkbox</type>
</CustomField>