force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Web_Address__c</fullName>
    <label>Web Address</label>
    <type>Url</type>
</CustomField>