force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/validationRules/ucinn_ascendv2__End_Date_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__End_Date_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <description>End date should be greater than the start date.</description>
    <errorConditionFormula>AND(
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE,
ucinn_ascendv2__End_Date__c &lt; ucinn_ascendv2__Start_Date__c )</errorConditionFormula>
    <errorMessage>Invalid start and end dates. Start date should be less than the end date.</errorMessage>
</ValidationRule>