force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/listViews/Affiliation_Clean_Up.listView-meta.xml
<ListView>
    <fullName>Affiliation_Clean_Up</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>ucinn_ascendv2__Account_Donor_ID_Formula__c</columns>
    <columns>Employer_Name__c</columns>
    <columns>ucinn_ascendv2__Constituent_Role__c</columns>
    <columns>Occupation__c</columns>
    <columns>ucinn_ascendv2__Job_Title__c</columns>
    <columns>ucinn_ascendv2__Organization_Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Is_Donor_Control__c</columns>
    <columns>ucinn_ascendv2__Is_Primary_Contact__c</columns>
    <columns>ucinn_ascendv2__Is_Employer_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Account_Donor_ID_Formula__c</field>
        <operation>equals</operation>
        <value>920111048</value>
    </filters>
    <label>Affiliation Clean Up</label>
</ListView>