force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/listViews/For_Jenny_Review.listView-meta.xml
<ListView>
    <fullName>For_Jenny_Review</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Constituent_Role__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>Employer_Name__c</columns>
    <columns>ucinn_ascendv2__Job_Title__c</columns>
    <columns>ucinn_ascendv2__Organization_Role__c</columns>
    <columns>ucinn_ascendv2__Is_Donor_Control__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>ISUF_Is_Preferred__c</columns>
    <columns>Occupation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ISU_Connection__c</field>
        <operation>includes</operation>
        <value>Sponsorship contact</value>
    </filters>
    <label>For Jenny Review</label>
    <sharedTo>
        <group>Information_Management</group>
    </sharedTo>
</ListView>